fixed mobile view overflowing

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
 
   <title>Personal Portfolio Website</title>
+  <style>
+    #root{
+      overflow: hidden;
+    }
+  </style>
 </head>
 
 <body>
